Fixes to CE 3.18.0-1-1 RN

--- a/calico-enterprise_versioned_docs/version-3.18/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/release-notes/index.mdx
@@ -97,18 +97,12 @@ Calico Enterprise 3.18.0 is now available as an early preview release.
 This release is for previewing and testing purposes only.
 It is not supported for use in production.
 
-<!--
-### Calico Enterprise 3.18.0-1.1 early preview release
+### Calico Enterprise 3.18.0-1.1 (early preview)
 
-10 10 2023
+13 October 2023
 
-#### New features
+Calico Enterprise 3.18.0-1-1  is now available as an early preview release.
+This release is for previewing and testing purposes only.
+It is not supported for use in production.
 
-#### Enhancements
-
-#### Bug fixes
-
-#### How to update
-
-To update an existing installation of Calico Enterprise 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
--->
+This release includes improvements and bug fixes.
