[EV-4240] Remove references to values.yaml replacement

--- a/calico-enterprise/multicluster/helm/create-a-managed-cluster-helm.mdx
+++ b/calico-enterprise/multicluster/helm/create-a-managed-cluster-helm.mdx
@@ -104,19 +104,19 @@ To install a {{prodname}} [managed](../create-a-managed-cluster#value) cluster w
   export MANAGED_CLUSTER_KEY=<managed-cluster-key>
   ```
 
-1. Append the managementCluster context to your values.yaml:
+1. Verify that the managed cluster context is correctly updated in the `values.yaml`.
 
   ```bash
-  echo "managementClusterConnection:
+  managementClusterConnection:
     enabled: true
     managementClusterAddress: $MANAGEMENT_CLUSTER_ADDR
     management:
       tls:
         crt: $MANAGEMENT_CLUSTER_CRT
-    managed:
-      tls:
-        crt: $MANAGED_CLUSTER_CRT
-        key: $MANAGED_CLUSTER_KEY" > values.yaml
+  managed:
+    tls:
+      crt: $MANAGED_CLUSTER_CRT
+      key: $MANAGED_CLUSTER_KEY
   ```
 
 1. Install the Tigera {{prodname}} operator and custom resource definitions using the Helm 3 chart:
