--- a/calico-enterprise/multicluster/helm/create-a-management-cluster-helm.mdx
+++ b/calico-enterprise/multicluster/helm/create-a-management-cluster-helm.mdx
@@ -126,10 +126,10 @@ To install a {{prodname}} [management](../create-a-management-cluster#value) clu
   export MANAGED_CLUSTER_CERTIFICATE=my-managed-cluster.crt.base64
   ```
 
-1. Append the managementCluster context to your `values.yaml` for NodePort:
+1. Verify that the management cluster context is correctly updated in the `values.yaml`. For a NodePort:
 
   ```bash
-  echo "managementCluster:
+  managementCluster:
     enabled: true
     address: $MANAGEMENT_CLUSTER_ADDR
     service:
@@ -144,7 +144,7 @@ To install a {{prodname}} [management](../create-a-management-cluster#value) clu
     clusters:
     - name: $MANAGED_CLUSTER_NAME
       operatorNamespace: $MANAGED_CLUSTER_OPERATOR_NAMESPACE
-      certificate: $MANAGED_CLUSTER_CERTIFICATE" > values.yaml
+      certificate: $MANAGED_CLUSTER_CERTIFICATE
   ```
 
 1. Install the Tigera {{prodname}} operator and custom resource definitions using the Helm 3 chart, with a NodePort service:
