--- a/calico-enterprise_versioned_docs/version-3.15/about-calico-enterprise.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/about-calico-enterprise.mdx
@@ -67,6 +67,7 @@ Learn about the {{prodname}} features that remove these blockers.
   config={{
     wistia: {
       videoFoam: true,
+      doNotTrack: true,
     },
   }}
 />
@@ -92,6 +93,7 @@ Connectivity issues between microservices are difficult to troubleshoot. Trouble
   config={{
     wistia: {
       videoFoam: true,
+      doNotTrack: true,
     },
   }}
 />
@@ -121,6 +123,7 @@ Many applications have compliance requirements such as workload isolation, ensur
   config={{
     wistia: {
       videoFoam: true,
+      doNotTrack: true,
     },
   }}
 />
@@ -147,6 +150,7 @@ Most security teams are short-staffed and don’t have the capacity to take on n
   config={{
     wistia: {
       videoFoam: true,
+      doNotTrack: true,
     },
   }}
 />
@@ -172,6 +176,7 @@ When deploying a new microservice to a secure cluster, it needs to be deployed a
   config={{
     wistia: {
       videoFoam: true,
+      doNotTrack: true,
     },
   }}
 />
@@ -197,6 +202,7 @@ Every cloud and hosting environment has a unique approach to segmentation, which
   config={{
     wistia: {
       videoFoam: true,
+      doNotTrack: true,
     },
   }}
 />
@@ -220,6 +226,7 @@ In addition to cloud microsegmentation and zero trust security, {{prodname}} pro
   config={{
     wistia: {
       videoFoam: true,
+      doNotTrack: true,
     },
   }}
 />
@@ -246,6 +253,7 @@ Kubernetes is particularly vulnerable to the spread of malware due to the open n
   config={{
     wistia: {
       videoFoam: true,
+      doNotTrack: true,
     },
   }}
 />
