react-player options

--- a/calico-enterprise_versioned_docs/version-3.16/about-calico-enterprise.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/about-calico-enterprise.mdx
@@ -6,9 +6,25 @@ description: Find the Calico Enterprise features that remove major blockers in y
 
 import ReactPlayer from 'react-player/wistia';
 
-## Your Kubernetes journey...
+## Config 1
 
 <ReactPlayer
   className='wistia_embed wistia_async_v60ur89tn9 videoFoam=true doNotTrack=true'
   url='https://fast.wistia.com/embed/medias/v60ur89tn9'
+/>
+
+## Config 2
+
+<ReactPlayer
+  className='wistia_embed wistia_async_v60ur89tn9'
+  url='https://fast.wistia.com/embed/medias/v60ur89tn9'
+  config={{
+    wistia: {
+      options: {
+        videoFoam: true,
+        playerColor: "ff0000",
+        doNotTrack: true
+      }
+    }
+  }}
 />
