--- a/calico-cloud_versioned_docs/version-18/get-started/connect/checklist.mdx
+++ b/calico-cloud_versioned_docs/version-18/get-started/connect/checklist.mdx
@@ -71,9 +71,9 @@ metadata:
   selfLink: ''
 ```
 
-## Upload Diags
+## Send failed installation diagnostics to Calico Cloud support
 
-To upload diagnostics to {{prodname}} support automatically, run the following command:
+To upload diagnostics about a failed installation to {{prodname}} support, run the following command:
 
 ```bash
 kubectl patch installer -n calico-cloud default --type merge -p='{"spec":{"uploadDiags":true}}'
