[EV-4241] Fix typo

--- a/calico-enterprise/multicluster/helm/create-a-managed-cluster-helm.mdx
+++ b/calico-enterprise/multicluster/helm/create-a-managed-cluster-helm.mdx
@@ -82,7 +82,7 @@ To install a {{prodname}} [managed](../create-a-managed-cluster#value) cluster w
 
 1. Export the management cluster certificate and managed cluster certificate and key.
   
-  If you haven't already done so already, generate the base64 encoded CRT and KEY for this managed cluster:
+  If you haven't already done so, generate the base64 encoded CRT and KEY for this managed cluster:
 
   ```bash
   openssl genrsa 2048 | base64 -w 0 > my-managed-cluster.key.base64
