--- a/calico_versioned_docs/version-3.26/about/index.mdx
+++ b/calico_versioned_docs/version-3.26/about/index.mdx
@@ -46,7 +46,7 @@ The following table summarizes the main {{prodname}} features. To search for spe
 | Security                     | &bull; Network policy enforcement for workload and host endpoints<br />&bull; Data-in-transit encryption using WireGuard |
 | Monitor {{prodname}} components | Uses Prometheus to monitor {{prodname}} component metrics.     |
 | User interfaces              | CLIs: `kubectl` and `calicoctl`                              |
-| APIs                         | &bull; Calico API for {{prodname}} resources <br /&bull; Installation API for operator installation and configuration |
+| APIs                         | &bull; Calico API for {{prodname}} resources <br />&bull; Installation API for operator installation and configuration |
 | Support and maintenance      | Community-driven. {{prodname}} powers 2M+ nodes daily across 166 countries. |
 
 ## Install {{prodname}}
