DOCS-1808: RN for felix improvements

--- a/calico/release-notes/index.mdx
+++ b/calico/release-notes/index.mdx
@@ -29,6 +29,14 @@ This option augments support for the Azure CNI with no overlay where a VNET IP a
 
 To review Azure CNI options, see [Microsoft Azure Kubernetes Service (AKS)](../getting-started/kubernetes/managed-public-cloud/aks).
 
+### Improved Felix performance for extremely large clusters
+
+This release adds improvements to how Felix processes active policy rules for clusters with extremely high numbers of endpoints and policy rules.
+Previously, calculating selector-based rules in these circumstances could take a long time or end in failure.
+Now Felix can perform these calculations quickly while reducing CPU usage by orders of magnitude.
+
+For more information, see [Selector performance in EntityRules](../reference/resources/globalnetworkpolicy.mdx#selector-performance-in-entityrules).
+
 ## Deprecated and removed features
 
 The following features are being deprecated or removed in this release:
