DOCS-1921: Fixes broken calicoq links for CE 3.17+

--- a/calico-enterprise_versioned_docs/version-3.17/operations/clis/calicoq/installing.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/operations/clis/calicoq/installing.mdx
@@ -5,6 +5,8 @@ description: Install the CLI for Calico Enterprise.
 # Install calicoq
 
 import MaintenanceClisCalicoqInstalling from '@site/calico-enterprise/_includes/components/MaintenanceClisCalicoqInstalling';
+import CodeBlock from '@theme/CodeBlock';
+export const version = '{{version}}' === 'master' ? 'master' : '{{releaseTitle}}';
 
 ## About installing calicoq
 
@@ -39,7 +41,11 @@ corresponds to your desired deployment.
 
 1. Use the following command to download the `calicoq` binary.
 
-   <MaintenanceClisCalicoqInstalling />
+  <CodeBlock language='bash'>
+    {'{{version}}' === 'master'
+      ? `curl -o calicoctl -O -L {{filesUrl}}/download/binaries/${version}/calicoctl`
+      : `curl -o calicoctl -O -L {{downloadsurl}}/ee/binaries/${version}/calicoctl`}
+  </CodeBlock>
 
 1. Set the file to be executable.
 
