--- a/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
@@ -4,19 +4,17 @@ description: What's new, and why features provide value for upgrading.
 
 # Calico Cloud release notes
 
-## October XX, 2023 (version 18.0.0)
+## October 23, 2023 (version 18.0.0)
 
 ### New features and enhancements
 
-<!-- Updates from CE 3.18 -->
-
-### Image Assurance registry scanner
+#### Image Assurance registry scanner
 
 The Image Assurance feature adds the ability to scan images in container registries at any time, on any infrastructure, including Kubernetes. This is ideal protection for images that don’t go through a pipeline (for example, third-party images), but are published to a registry. If CVEs are missed in your build pipeline, you can catch them before they are deployed.
 
 For more information, see [Scan images in container registries](../image-assurance/scanners/registry-scanner).
 
-### Security event management
+#### Security event management
 
 We've added a new Security event management dashboard for threat detection.
 Security events provides context for suspicious activity detected in your cluster.
@@ -24,40 +22,43 @@ Combined with the Kubernetes context, you can see what workloads are affected.
 
 For more information, see [Security event management](../threat/security-event-management).
 
-### New performance optimizations for egress gateways
+#### New performance optimizations for egress gateways
 
 {{prodname}} includes new performance options for egress gateway policies that can be used to ensure that application client and gateway pods are on the same cluster node.
 
 For more information, see [Optimize egress networking for workloads with long-lived TCP connections](../networking/egress/egress-gateway-maintenance).
 
-### Configurable XFF headers for Envoy
+#### Configurable XFF headers for Envoy
 
 We've added support for XFF to propagate the original IP address when proxying application layer traffic with Envoy within a Kubernetes cluster.
 
 For more information, see [Installation reference](../reference/installation/api#operator.tigera.io/v1.EnvoySettings).
 
-### Alert-only mode for Workload-based Web Application Firewall (WAF)
+#### Alert-only mode for workload-based Web Application Firewall (WAF)
 
 We've added a new default mode for WAF that is monitor/event only.
 This allows operators and security teams to verify the accuracy of configured rules before actively blocking traffic.
 
 For more information, see [Web application firewall](../threat/web-application-firewall).
 
-### Deprecated and removed features
-
-The following features are being deprecated or removed in this release:
-
-The Anomaly detection feature is no longer supported and documentation is removed. Anomaly detection has been reworked and added to [Security event management](../threat/security-event-management).
-
-<!-- CC 18 updates -->
 ### Enhancements
 
 * You can now remove disconnected clusters from the list of managed clusters. See [Cluster management](../operations/cluster-management.mdx#remove-a-cluster).
 
+### Deprecated and removed features
+
+* The anomaly detection feature has been removed in this release.
+
+### Known issues
+
+<!-- EV-4175 -->
+* The policy recommendation tool is not displaying policy recommendations.
+  There is currently no workaround, but the issue will be fixed in an upcoming release.
+
 ### Bug fixes
 
-* Bug
-* Bug
+<!-- TSLA-5314 -->
+* We fixed an issue that caused a bad error message to appear when you changed a Calico Cloud user's role.
 
 ## September 11, 2023 (version 17.1.1)
 
