--- a/calico-enterprise/release-notes/index.mdx
+++ b/calico-enterprise/release-notes/index.mdx
@@ -71,13 +71,9 @@ To review Azure CNI options, see [Microsoft Azure Kubernetes Service (AKS)](../g
 
 <!-- We can break this up by component. H3 subheads or additions to titles -->
 
-<!-- Optional, as needed
+### Deprecated and removed features
 
-## Deprecated and removed features
-
-The following features are being deprecated or removed in this release:
-
--->
+* The anomaly detection feature has been removed in this release.
 
 <!-- Optional, as needed
 ## Technology Preview features
