--- a/calico-enterprise/multicluster/federation/index.mdx
+++ b/calico-enterprise/multicluster/federation/index.mdx
@@ -3,7 +3,7 @@ description: Steps to configure cluster mesh.
 hide_table_of_contents: true
 ---
 
-# Federation and multi-cluster networking
+# Cluster mesh
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
