Add-degredation-note-RN

--- a/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
@@ -51,6 +51,12 @@ For more information, see [Web application firewall](../threat/web-application-f
 * The policy recommendation tool is not displaying policy recommendations.
   There is currently no workaround, but the issue will be fixed in an upcoming release.
 
+* Using a bookmarked link to log in to the {{prodname}} UI in this release causes the following problems:
+  - Image Assurance configuration page fails to load
+  - The Manager UI shows the enterprise license countdown at the top of the screen even for paid customers
+
+If you are experiencing any login issues, go to https://calicocloud.io and log back in.
+
 ### Bug fixes
 
 <!-- TSLA-5314 -->
