--- a/calico-cloud_versioned_docs/version-18/image-assurance/scanners/pipeline-scanner.mdx
+++ b/calico-cloud_versioned_docs/version-18/image-assurance/scanners/pipeline-scanner.mdx
@@ -29,7 +29,7 @@ If the CLI scanner is part of your pipeline, scanning is done before runtime and
 ## How to
 
 - [Get the latest version of Image Assurance](#get-the-latest-version-of-image-assurance)
-- [Download the scanner](#download-the-scanner)
+- [Start the scanner](#start-the-scanner)
 - [Integrate the scanner in your build pipeline](#integrate-the-scanner-in-your-build-pipeline)
 - [Manually scan images](#manually-scan-images)
 - [Scan images using a configuration file](#scan-images-using-a-configuration-file)
@@ -39,7 +39,10 @@ If the CLI scanner is part of your pipeline, scanning is done before runtime and
 1. On the **Managed Clusters** page, select the cluster from the list, and click **Reinstall**.
 1. Copy the updated installation script command and run it against your cluster.
 
-### Download the scanner
+### Start the scanner
+
+<!--
+If you change the name of above heading, open a ticket to update the hardcoded Candu link in the UI. -->
 
 1. Download the latest version of the scanner.
 
@@ -57,7 +60,7 @@ If the CLI scanner is part of your pipeline, scanning is done before runtime and
 
 2. Set the executable flag on the binary.
 
-   ``shell
+   ```shell
    chmod +x ./tigera-scanner
    ```
 
