--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/minikube.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/minikube.mdx
@@ -54,7 +54,7 @@ If `192.168.0.0/16` is already in use within your network you must select a diff
 :::
 
 ```bash
-minikube start --network-plugin=cni --extra-config=kubeadm.pod-network-cidr=192.168.0.0/16
+minikube start --cni=false --network-plugin=cni --extra-config=kubeadm.pod-network-cidr=192.168.0.0/16 --subnet=172.16.0.0/24
 ```
 
 2. Install the Tigera {{prodname}} operator and custom resource definitions.
