You seem to use different namespaces in different examples
Is this a typo or I'm missing something?

--- a/calico_versioned_docs/version-3.26/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
+++ b/calico_versioned_docs/version-3.26/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
@@ -62,7 +62,7 @@ installed directly on the cluster as a Deployment, and is configured through one
 1. Verify {{prodname}} installation in your cluster.
 
    ```
-   watch kubectl get pods -n calico-system
+   watch kubectl get pods -n kube-system
    ```
    You should see a result similar to the below.
 
