--- a/calico-enterprise/networking/ipam/initial-ippool.mdx
+++ b/calico-enterprise/networking/ipam/initial-ippool.mdx
@@ -38,7 +38,7 @@ resource and configures the default Calico IP pool. Note the following:
   - NodeSelector: all()
   - NATOutgoing: Enabled
 - IP pools are only used when Calico is used for pod networking, IP pools are not utilized when using other pod networking solutions.
-- To make changes to the IP pools after Tigera Operator install, you may use [calicoctl](../../reference/clis/calicoctl/index.mdx) or kubectl. If you make the changes to the IP Pool in the Installation resource (Operator IPPool) after installation, the the changes are not applied.
+- To make changes to the IP pools after Tigera Operator install, you may use [calicoctl](../../reference/clis/calicoctl/index.mdx) or kubectl. If you make the changes to the IP Pool in the Installation resource (Operator IPPool) after installation, the changes are not applied.
 
 ## Before you begin...
 
