--- a/calico-cloud_versioned_docs/version-18/reference/component-resources/configuration.mdx
+++ b/calico-cloud_versioned_docs/version-18/reference/component-resources/configuration.mdx
@@ -529,7 +529,7 @@ metadata:
 ...
 ```
 
-To disable it, remove the bandwidth section from the the CNI network configuration in the {{prodname}} manifests.
+To disable it, remove the bandwidth section from the CNI network configuration in the {{prodname}} manifests.
 
 ```json
 {
