--- a/calico-cloud_versioned_docs/version-18/reference/component-resources/node/felix/prometheus.mdx
+++ b/calico-cloud_versioned_docs/version-18/reference/component-resources/node/felix/prometheus.mdx
@@ -71,7 +71,7 @@ existing metrics.
 | `felix_log_errors`                                         | Number of errors encountered while logging.                                                                                                               |
 | `felix_logs_dropped`                                       | Number of logs dropped because the output stream was blocked.                                                                                             |
 | `felix_reporter_log_errors`                                | Number of errors encountered while logging in the Syslog.                                                                                                 |
-| `felix_reporter_logs_dropped`                              | Number of logs dropped because the output was blocked in the the Syslog reporter.                                                                         |
+| `felix_reporter_logs_dropped`                              | Number of logs dropped because the output was blocked in the Syslog reporter.                                                                         |
 | `felix_resync_state`                                       | Current datastore state.                                                                                                                                  |
 | `felix_resyncs_started`                                    | Number of times Felix has started resyncing with the datastore.                                                                                           |
 | `felix_route_table_list_seconds`                           | Time taken to list all the interfaces during a resync.                                                                                                    |
