--- a/calico-enterprise_versioned_docs/version-3.15/operations/cnx/configure-identity-provider.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/operations/cnx/configure-identity-provider.mdx
@@ -53,7 +53,7 @@ When configuring your cluster, you may be asked for the following inputs:
    metadata:
      name: tigera-secure
    spec:
-      # This indicates where the Manager UI can be accessed from the browser. Include the port only if the the manager UI is not running on port 443.
+      # This indicates where the Manager UI can be accessed from the browser. Include the port only if the manager UI is not running on port 443.
      managerDomain: https://<domain-of-manager-ui>
      oidc:
        issuerURL: <your-idp-issuer>
@@ -128,7 +128,7 @@ When configuring your cluster, you may be asked for the following inputs:
    `CLUSTER_DOMAIN` is the domain (excl. port) where your OpenShift cluster is accessed (run `oc status` to get it) and `CLIENT_SECRET` is a value of your choosing.
 
    ```bash
-    # This indicates where the Manager UI can be accessed from the browser. Include the port only if the the manager UI is not running on port 443.
+    # This indicates where the Manager UI can be accessed from the browser. Include the port only if the manager UI is not running on port 443.
    MANAGER_URL=<manager-host>:<port>
    CLUSTER_DOMAIN=<domain-of-your-ocp-cluster>
    CLIENT_SECRET=<clientSecret>
@@ -161,7 +161,7 @@ When configuring your cluster, you may be asked for the following inputs:
    metadata:
      name: tigera-secure
    spec:
-      # This indicates where the Manager UI can be accessed from the browser. Include the port only if the the manager UI is not running on port 443.
+      # This indicates where the Manager UI can be accessed from the browser. Include the port only if the manager UI is not running on port 443.
      managerDomain: $MANAGER_URL
      openshift:
        issuerURL: https://api.$CLUSTER_DOMAIN:6443
@@ -194,7 +194,7 @@ When configuring your cluster, you may be asked for the following inputs:
    metadata:
      name: tigera-secure
    spec:
-      # This indicates where the Manager UI can be accessed from the browser. Include the port only if the the manager UI is not running on port 443.
+      # This indicates where the Manager UI can be accessed from the browser. Include the port only if the manager UI is not running on port 443.
      managerDomain: https://<manager-host>:<port>
      ldap:
        # The host and port of the LDAP server. Example: ad.example.com:636.
