--- a/calico-enterprise_versioned_docs/version-3.16/_includes/content/_docker-container-service.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/content/_docker-container-service.mdx
@@ -10,7 +10,7 @@ This section describes how to run `{{nodecontainer}}` as a Docker container.
 
 ### Step 3: Configure the init system
 
-Use an init daemon (like systemd or upstart) to start the the {{nodecontainer}} image as a service using the EnvironmentFile values.
+Use an init daemon (like systemd or upstart) to start the {{nodecontainer}} image as a service using the EnvironmentFile values.
 
 Sample systemd service file: `{{noderunning}}.service`
 
