--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/self-managed-onprem/config-options.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/self-managed-onprem/config-options.mdx
@@ -56,7 +56,7 @@ spec:
 
 :::note
 
-The the ipPools array can take at most one IPv4 and one IPv6 CIDR, and only takes effect when installing {{prodname}} for the first
+the ipPools array can take at most one IPv4 and one IPv6 CIDR, and only takes effect when installing {{prodname}} for the first
 time on a given cluster. To add additional pools, see [the IPPool API](../../../reference/resources/ippool.mdx).
 
 :::
