--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/windows-calico/openshift-installation.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/windows-calico/openshift-installation.mdx
@@ -246,7 +246,7 @@ For OpenShift 4.6, use the latest wmcb.exe for OpenShift 4.5. A wmcb.ex binary f
 
 :::
 
-Next, we will download the the `worker.ign` file from the API server:
+Next, we will download the `worker.ign` file from the API server:
 
 ```powershell
 $apiServer = c:\k\kubectl --kubeconfig c:\k\config get po -n  openshift-kube-apiserver -l apiserver=true --no-headers -o custom-columns=":metadata.name" | select -first 1
