--- a/calico_versioned_docs/version-3.25/reference/configure-cni-plugins.mdx
+++ b/calico_versioned_docs/version-3.25/reference/configure-cni-plugins.mdx
@@ -552,7 +552,7 @@ metadata:
 ...
 ```
 
-To disable it, remove the bandwidth section from the the CNI network configuration in the {{prodname}} manifests.
+To disable it, remove the bandwidth section from the CNI network configuration in the {{prodname}} manifests.
 
 ```json
 {
