--- a/calico_versioned_docs/version-3.26/_includes/content/_docker-container-service.mdx
+++ b/calico_versioned_docs/version-3.26/_includes/content/_docker-container-service.mdx
@@ -17,7 +17,7 @@ applied to other init daemons such as upstart.
 
 ### Step 2: Configure the init system
 
-Use an init daemon (like systemd or upstart) to start the the {{nodecontainer}} image as a service using the EnvironmentFile values.
+Use an init daemon (like systemd or upstart) to start the {{nodecontainer}} image as a service using the EnvironmentFile values.
 
 Sample systemd service file: `{{noderunning}}.service`
 
