[EV-4256] Multi-cluster management installation with Helm

--- a/calico-enterprise/multicluster/set-up-multi-cluster-management/helm-install/index.mdx
+++ b/calico-enterprise/multicluster/set-up-multi-cluster-management/helm-install/index.mdx
@@ -3,7 +3,7 @@ description: Steps to configure management and managed clusters using Helm.
 hide_table_of_contents: true
 ---
 
-# Helm and multi-cluster networking
+# Helm and multi-cluster management
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
