--- a/calico-enterprise/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
+++ b/calico-enterprise/multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx
@@ -2,7 +2,7 @@
 description: Create a Calico Enterprise managed cluster that you can control from you management cluster.
 ---
 
-# Create and configure a managed cluster
+# Create a Calico Enterprise managed cluster
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
@@ -31,7 +31,7 @@ This how-to guide uses the following {{prodname}} features:
 **Required**
 
 - A [Calico Enterprise management cluster](create-a-management-cluster.mdx)
-- A [{{prodname}} license and pull secret](../getting-started/install-on-clusters/calico-enterprise.mdx)
+- A [{{prodname}} license and pull secret](../../../getting-started/install-on-clusters/calico-enterprise.mdx)
 
 ## How to
 
@@ -70,5 +70,5 @@ Follow these steps in the cluster you intend to use as the managed cluster.
 
 ## Next steps
 
-- When you are ready to fine-tune your multi-cluster management deployment for production, see [Fine-tune multi-cluster management](fine-tune-deployment.mdx)
-- To change an existing {{prodname}} standalone cluster to a management or managed cluster, see [Change cluster types](change-cluster-type.mdx)
+- When you are ready to fine-tune your multi-cluster management deployment for production, see [Fine-tune multi-cluster management](../../fine-tune-deployment.mdx)
+- To change an existing {{prodname}} standalone cluster to a management or managed cluster, see [Change cluster types](../../change-cluster-type.mdx)
