--- a/calico-enterprise/multicluster/set-up-multi-cluster-management/standard-install/create-a-management-cluster.mdx
+++ b/calico-enterprise/multicluster/set-up-multi-cluster-management/standard-install/create-a-management-cluster.mdx
@@ -23,7 +23,7 @@ This how-to guide uses the following {{prodname}} features:
 
 **Required**
 
-- A Calico Enterprise cluster, see [here](../getting-started/install-on-clusters/index.mdx) for help
+- A Calico Enterprise cluster, see [here](../../../getting-started/install-on-clusters/index.mdx) for help
 - A reachable, public IP address for the management cluster
 
 ## How to
@@ -33,7 +33,7 @@ This how-to guide uses the following {{prodname}} features:
 To control managed clusters from your central management plane, you must ensure it is reachable for connections. The simplest way to get started (but not for production scenarios), is to configure a `NodePort` service to expose the management cluster. Note that the service must live within the `tigera-manager` namespace.
 
 1.  Create a service to expose the management cluster.
-    The following example of a NodePort service may not be suitable for production and high availability. For options, see [Fine-tune multi-cluster management for production](fine-tune-deployment.mdx).
+    The following example of a NodePort service may not be suitable for production and high availability. For options, see [Fine-tune multi-cluster management for production](../../fine-tune-deployment.mdx).
     Apply the following service manifest.
 
     ```bash
@@ -59,7 +59,7 @@ To control managed clusters from your central management plane, you must ensure 
     ```bash
     export MANAGEMENT_CLUSTER_ADDR=<your-management-cluster-addr>
     ```
-1.  Apply the [ManagementCluster](../reference/installation/api.mdx#operator.tigera.io/v1.ManagementCluster) CR.
+1.  Apply the [ManagementCluster](../../../reference/installation/api.mdx#operator.tigera.io/v1.ManagementCluster) CR.
 
     ```bash
     kubectl apply -f - <<EOF
@@ -124,5 +124,5 @@ You have successfully installed a management cluster.
 ## Next steps
 
 - To create and add a managed cluster to your management cluster, see [Create and configure a managed cluster](create-a-managed-cluster.mdx)
-- When you are ready to fine-tune your multi-cluster management deployment for production, see [Fine-tune multi-cluster management](fine-tune-deployment.mdx)
-- To change an existing {{prodname}} standalone cluster to a management or managed cluster, see [Change cluster types](change-cluster-type.mdx)
+- When you are ready to fine-tune your multi-cluster management deployment for production, see [Fine-tune multi-cluster management](../../fine-tune-deployment.mdx)
+- To change an existing {{prodname}} standalone cluster to a management or managed cluster, see [Change cluster types](../../change-cluster-type.mdx)
