--- a/calico-enterprise_versioned_docs/version-3.18/multicluster/fine-tune-deployment.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/multicluster/fine-tune-deployment.mdx
@@ -22,7 +22,7 @@ Because the management cluster stores all log data across your managed clusters,
 
 ### Review service type for the management cluster
 
-In the [Install multi-cluster management guide](create-a-management-cluster.mdx), we used a `NodePort` service because it was the quickest way to expose the management cluster. But, there are drawbacks to using `NodePort` services, described in [Defining a Service in Kubernetes](https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service). For production and high availability, choose a type of service that is scalable. We have tested both `NodePort` and `LoadBalancer` services. For both, a security rule/firewall rule is needed to allow connections to the management cluster.
+In the [Install multi-cluster management guide](./set-up-multi-cluster-management/standard-install/create-a-management-cluster.mdx), we used a `NodePort` service because it was the quickest way to expose the management cluster. But, there are drawbacks to using `NodePort` services, described in [Defining a Service in Kubernetes](https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service). For production and high availability, choose a type of service that is scalable. We have tested both `NodePort` and `LoadBalancer` services. For both, a security rule/firewall rule is needed to allow connections to the management cluster.
 
 The configuration for your service (regardless of type) should obey the following requirements:
 
@@ -57,13 +57,13 @@ Using a LoadBalancer may require additional steps, depending on how you provisio
 
 :::note
 
-If you previously set up a management cluster with a service, don’t forget to update the IP address in each managed clusters, by editing the `ManagementClusterConnection` [manifest that you downloaded](create-a-managed-cluster.mdx) and apply it, or use `kubectl edit managementclusterconnection tigera-secure`.
+If you previously set up a management cluster with a service, don’t forget to update the IP address in each managed clusters, by editing the `ManagementClusterConnection` [manifest that you downloaded](./set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx) and apply it, or use `kubectl edit managementclusterconnection tigera-secure`.
 
 :::
 
 ### Review user permissions
 
-In the [Install multi-cluster management guide](create-a-management-cluster.mdx), we created a user with full admin-level permissions in both the management and managed cluster. In a production environment you will want to define narrow permissions for your users.
+In the [Install multi-cluster management guide](./set-up-multi-cluster-management/standard-install/create-a-management-cluster.mdx), we created a user with full admin-level permissions in both the management and managed cluster. In a production environment you will want to define narrow permissions for your users.
 
 When defining roles and permissions across your clusters, make note of the following:
 
