--- a/calico-enterprise/multicluster/set-up-multi-cluster-management/helm-install/create-a-managed-cluster-helm.mdx
+++ b/calico-enterprise/multicluster/set-up-multi-cluster-management/helm-install/create-a-managed-cluster-helm.mdx
@@ -2,7 +2,7 @@
 description: Install Calico Enterprise managed cluster using Helm application package manager.
 ---
 
-# Create a Calico Enterprise managed cluster with Helm
+# Create a Calico Enterprise managed cluster
 
 import CodeBlock from '@theme/CodeBlock';
 
@@ -20,11 +20,11 @@ Helm charts are a way to package up an application for Kubernetes (similar to `a
 
 - Install Helm 3
 - `kubeconfig` is configured to work with your cluster (check by running `kubectl get nodes`)
-- [Credentials for the Tigera private registry and a license key](../../getting-started/install-on-clusters/calico-enterprise.mdx)
+- [Credentials for the Tigera private registry and a license key](../../../getting-started/install-on-clusters/calico-enterprise.mdx)
 
 ## Concepts
 
-### Operator based installation
+### Operator-based installation
 
 In this guide, you install the Tigera Calico operator and custom resource definitions using the Helm 3 chart. The Tigera operator provides lifecycle management for {{prodname}} exposed via the Kubernetes API defined as a custom resource definition.
 
@@ -32,17 +32,17 @@ In this guide, you install the Tigera Calico operator and custom resource defini
 
 ### Download the Helm chart
 
-Add the Calico helm repo:
-
-  ```bash
-  helm repo add projectcalico https://docs.tigera.io/calico/charts
-  ```
+  <CodeBlock language='bash'>
+     {'{{version}}' === 'master'
+       ? `helm repo add tigera gs://tigera-helm-charts`
+       : `curl -O -L https://downloads.tigera.io/ee/charts/tigera-operator-{{chart_version_name}}.tgz`}
+  </CodeBlock>
 
 ### Customize the Helm chart
 
 If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), or you need to customize TLS certificates, you **must** customize this Helm chart by creating a `values.yaml` file. Otherwise, you can skip this step.
 
-1. If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), set the `kubernetesProvider` as described in the [Installation reference](../../reference/installation/api.mdx#operator.tigera.io/v1.Provider). For example:
+1. If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), set the `kubernetesProvider` as described in the [Installation reference](../../../reference/installation/api.mdx#operator.tigera.io/v1.Provider). For example:
 
   ```bash
   echo '{ installation: {kubernetesProvider: EKS }}' > values.yaml
@@ -64,15 +64,17 @@ If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubern
   EOF
   ```
 
-1. Add any other customizations you require to `values.yaml`. To see values that can be customized in the chart, see the [helm docs](https://helm.sh/docs/) or run the following command:
+1. Add any other customizations you require to `values.yaml`. To see values that can be customized in the chart run the following command:
 
-  ```
-  helm show values projectcalico/tigera-operator --version tigera-operator-{{version}}
-  ```
+  <CodeBlock language='bash'>
+     {'{{version}}' === 'master'
+       ? `helm show values tigera/tigera-operator --version v0.0`
+       : `helm show values ./tigera-operator-{{chart_version_name}}.tgz`}
+  </CodeBlock>
 
 ### Install {{prodname}}
 
-To install a {{prodname}} [managed](../create-a-managed-cluster#value) cluster with Helm:
+To install a {{prodname}} [managed](../standard-install/create-a-managed-cluster#value) cluster with Helm:
 
 1. Export the service port number, and the public IP or host of the management cluster. (Ex. "example.com:1234" or "10.0.0.10:1234".)
 
@@ -86,37 +88,38 @@ To install a {{prodname}} [managed](../create-a-managed-cluster#value) cluster w
 
   ```bash
   openssl genrsa 2048 | base64 -w 0 > my-managed-cluster.key.base64
-  openssl req -new -key <(base64 -d my-managed-cluster.key.base64) -subj "/CN=tigera-voltron" | \
+  openssl req -new -key <(base64 -d my-managed-cluster.key.base64) -subj "/CN=my-managed-cluster" | \
   openssl x509 -req -signkey <(base64 -d my-managed-cluster.key.base64) -days 365 | base64 -w 0 > my-managed-cluster.crt.base64
   ```
 
   Get the MANAGEMENT_CLUSTER_CRT by running the following command on the management cluster:
 
   ```bash
-  kubectl get secret tigera-pull-secret -n tigera-operator -o jsonpath='{.data.tls\.crt}' | base64 -d > management-cluster.crt.base64
+  kubectl get secret -n tigera-operator $(kubectl get managementcluster tigera-secure -o jsonpath='{.spec.tls.secretName}') -o jsonpath='{.data.tls\.crt}' > management-cluster.crt.base64
   ```
 
   Export the managed cluster variables:
 
   ```bash
-  export MANAGEMENT_CLUSTER_CRT=<management-cluster-crt>
-  export MANAGED_CLUSTER_CRT=<managed-cluster-crt>
-  export MANAGED_CLUSTER_KEY=<managed-cluster-key>
+  export MANAGEMENT_CLUSTER_CRT=$(cat management-cluster.crt.base64)
+  export MANAGED_CLUSTER_CRT=$(cat my-managed-cluster.crt.base64)
+  export MANAGED_CLUSTER_KEY=$(cat my-managed-cluster.key.base64)
   ```
 
-1. Verify that the managed cluster context is correctly updated in the `values.yaml`.
+1. Append the management cluster context to your `values.yaml`:
 
   ```bash
+  echo "
   managementClusterConnection:
     enabled: true
     managementClusterAddress: $MANAGEMENT_CLUSTER_ADDR
     management:
       tls:
         crt: $MANAGEMENT_CLUSTER_CRT
-  managed:
-    tls:
-      crt: $MANAGED_CLUSTER_CRT
-      key: $MANAGED_CLUSTER_KEY
+    managed:
+      tls:
+        crt: $MANAGED_CLUSTER_CRT
+        key: $MANAGED_CLUSTER_KEY" >> values.yaml
   ```
 
 1. Install the Tigera {{prodname}} operator and custom resource definitions using the Helm 3 chart:
@@ -157,14 +160,14 @@ Define admin-level permissions for the service account `mcm-user` we created to 
 
 **Recommended**
 
-- [Configure access to {{prodname}} Manager UI](../../operations/cnx/access-the-manager.mdx)
-- [Authentication quickstart](../../operations/cnx/authentication-quickstart.mdx)
-- [Configure your own identity provider](../../operations/cnx/configure-identity-provider.mdx)
+- [Configure access to {{prodname}} Manager UI](../../../operations/cnx/access-the-manager.mdx)
+- [Authentication quickstart](../../../operations/cnx/authentication-quickstart.mdx)
+- [Configure your own identity provider](../../../operations/cnx/configure-identity-provider.mdx)
 
 **Recommended - Networking**
 
-- The default networking is IP in IP encapsulation using BGP routing. For all networking options, see [Determine best networking option](../../networking/determine-best-networking.mdx).
+- The default networking is IP in IP encapsulation using BGP routing. For all networking options, see [Determine best networking option](../../../networking/determine-best-networking.mdx).
 
 **Recommended - Security**
 
-- [Get started with {{prodname}} tiered network policy](../../network-policy/policy-tiers/tiered-policy.mdx)
+- [Get started with {{prodname}} tiered network policy](../../../network-policy/policy-tiers/tiered-policy.mdx)
