--- a/calico-enterprise/release-notes/index.mdx
+++ b/calico-enterprise/release-notes/index.mdx
@@ -60,7 +60,7 @@ For more information, see [Configure federated endpoint identity and services](.
 
 We've added the option to use Helm to install and upgrade if you are using the multi-cluster management feature. With Helm, your DevOps teams can automate these complex deployments more easily.
 
-For more information, see [Helm for multi-cluster management](../multicluster/helm/).
+For more information, see [Helm for multi-cluster management](../multicluster/create-a-management-cluster/).
 
 ### Support for Azure CNI with overlay networking for AKS
 
