Fix bash script syntax highlighting in federated doc

--- a/calico-enterprise/multicluster/federation/kubeconfig.mdx
+++ b/calico-enterprise/multicluster/federation/kubeconfig.mdx
@@ -207,7 +207,7 @@ We'll now create the RemoteClusterConfigurations that establish synchronization 
 1. Create the RemoteClusterConfiguration in cluster A:
 
    Within the RemoteClusterConfiguration, we specify the secret used to access cluster B, and the overlay routing mode which toggles the establishment of cross-cluster overlay routes.
-   ```yaml
+   ```bash
    kubectl create -f - <<EOF
    apiVersion: projectcalico.org/v3
    kind: RemoteClusterConfiguration
